# graphMQ

./: CMakeLists.txt  README.md  pom.xml
src/main/: bytecodes.md
src/main/interpreter/: CMakeLists.txt  example.byc  main.cpp  main.h
src/main/interpreter/interpreter/: bytecode_out.byc  d  debug.h  interpreter_threaded.cpp  interpreter_threaded.h  loader.cpp  loader.h  main.cpp  memory.cpp  memory.h  mqtypes.h  sync_interpreter.cpp  sync_interpreter.h  tic_t.cpp  tic_t.h  tqm_t.h  vm_t.cpp  vm_t.h
src/main/interpreter/interpreter_old/: main.cpp  main.h
src/main/interpreter/interpreter_old/bytecode/: bytecode.h
src/main/interpreter/interpreter_old/jobs/: job_mq.cpp  job_mq.h  jobmanager.cpp  jobmanager.h
src/main/interpreter/interpreter_old/jobs/threads/: communication.cpp  communication.h  jobthread.cpp  jobthread.h
src/main/java/org/atzitz/graphMQ/compiler/lexer/: Constants.java  Token.java  TokenType.java  Tokenizer.java
src/main/java/org/atzitz/graphMQ/compiler/parser/: Parser.java
src/main/java/org/atzitz/graphMQ/compiler/parser/nodes/: ASTAlloc.java  ASTVar.java  (+23 more)
src/main/java/org/atzitz/graphMQ/compiler/semantics/: SemanticsAnalyser.java
src/main/java/org/atzitz/graphMQ/compiler/utils/: Location.java  Source.java
src/main/java/org/atzitz/graphMQ/exceptions/: LangException.java
src/main/java/org/atzitz/graphMQ/exceptions/compile/: LangCompileTimeException.java
src/main/java/org/atzitz/graphMQ/exceptions/runtime/: LangRuntimeException.java
src/main/java/org/atzitz/graphMQ/interpreter/: Main.java  bytecode_test1.byc
src/test/: d.txt  e.txt
(+14 files in other folders)
